th-333: * icons align fixed

--- a/frontend/src/pages/driver-order/styles.module.scss
+++ b/frontend/src/pages/driver-order/styles.module.scss
@@ -67,7 +67,7 @@
 }
 
 .detail svg {
-  width: 20px;
+  width: 25px;
   margin-right: 15px;
 }
 
